--- a/ProjetoEMPSOFT/app/src/main/res/values/strings.xml
+++ b/ProjetoEMPSOFT/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_schedule">ScheduleActivity</string>
+    
+    <string-array name="veterinarians">
+        <item>Dr. Caetano</item>
+    </string-array>
 </resources>
